[gd_scene load_steps=19 format=3 uid="uid://cpei0qpq5a6sh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ekskw"]
[ext_resource type="Material" uid="uid://cvr574d7jsmpr" path="res://scenes/player.tres" id="1_jl0jb"]
[ext_resource type="Texture2D" uid="uid://c3uv7x5cs80fs" path="res://assets/tempcharacter.png" id="3_jiavk"]
[ext_resource type="PackedScene" uid="uid://buro5lgnk1jbi" path="res://HUD.tscn" id="4_gwwle"]
[ext_resource type="PackedScene" uid="uid://doxututrm5s8o" path="res://scenes/UI/charge_meter.tscn" id="5_lxcx6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0on2d"]
atlas = ExtResource("3_jiavk")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nye5d"]
atlas = ExtResource("3_jiavk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwn6j"]
atlas = ExtResource("3_jiavk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2i0p"]
atlas = ExtResource("3_jiavk")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_clr3u"]
atlas = ExtResource("3_jiavk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j052u"]
atlas = ExtResource("3_jiavk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2kje"]
atlas = ExtResource("3_jiavk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvvbm"]
atlas = ExtResource("3_jiavk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65uci"]
atlas = ExtResource("3_jiavk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u128c"]
atlas = ExtResource("3_jiavk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujigl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0on2d")
}],
"loop": true,
"name": &"faster run",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nye5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwn6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2i0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clr3u")
}],
"loop": true,
"name": &"grind",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j052u")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2kje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvvbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65uci")
}],
"loop": true,
"name": &"jump",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u128c")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvl7a"]
size = Vector2(31, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_iit1j"]

[node name="player" type="CharacterBody2D"]
material = ExtResource("1_jl0jb")
use_parent_material = true
collision_layer = 2
script = ExtResource("1_ekskw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
material = ExtResource("1_jl0jb")
position = Vector2(0, -26)
sprite_frames = SubResource("SpriteFrames_ujigl")
animation = &"faster run"
autoplay = "idle"

[node name="ChargeMeter" parent="AnimatedSprite2D" instance=ExtResource("5_lxcx6")]
offset_top = -46.0
offset_bottom = -46.0
scale = Vector2(0.4, 0.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -27)
shape = SubResource("RectangleShape2D_dvl7a")

[node name="boostfxtime" type="Timer" parent="."]
wait_time = 0.016

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -11)
shape = SubResource("CircleShape2D_iit1j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("4_gwwle")]

[node name="ChargeTime" type="Timer" parent="."]
one_shot = true

[node name="coyote" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
